[Add] アイコン実装

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,12 +6,18 @@
   "description": "chrome extension to get youtube thumbnails",
   "permissions": ["tabs"],
   "browser_action": {
-    "default_popup": "popup-dialog.html"
+    "default_popup": "popup-dialog.html",
+    "default_icon": "icon/icon48.png"
   },
   "content_scripts": [{
     "matches": ["https://*/*"],
     "js": [
       "index.js"
     ]
-  }]
+  }],
+  "icons": {
+    "16": "icon/icon16.png",
+    "48": "icon/icon48.png",
+    "128": "icon/icon128.png"
+  }
 }
